# parallel-cpp

./: .gitignore  LICENSE.md  README.md  book.bib  book.tex
chapters/: 00_title_page.tex  01_preface.tex  02_introduction.tex  03_concepts.tex  04_syntax_cpp23.tex  05_syntax_openmp.tex  06_syntax_sycl.tex  07_algorithms_ml.tex  07_messagepassing.tex  08_algorithms_sorting.tex  09_datastructures.tex  10_datastructures.tex  10_messagepassing.tex
code_examples/: CMakeLists.txt
code_examples/algorithms/: CMakeLists.txt  accumulate.cpp  accumulate_right.cpp  accumulate_right_code.h  binary_search.cpp  for_each.cpp  for_each_code_parallel.h  for_each_code_range.h  for_each_code_simple.h  for_each_n.cpp  for_each_n_code.h  is_sorted.cpp  is_sorted_until.cpp  is_sorted_until_code.h  lexicographical_compare.cpp  lexicographical_compare_code.h  lexicographical_compare_three_way.cpp  lexicographical_compare_three_way_code.h  lexicographical_compare_useful.cpp  lexicographical_compare_useful_code.h  merge.cpp  merge_code.h  merge_par.cpp  partial_sort.cpp  partial_sort_code.h  partial_sort_copy.cpp  partial_sort_copy_code.h  qsort-cpp.cpp  qsort-openmp.cpp  qsort.cpp  qsort_code.h  qsort_not.cpp  reduce.cpp  reduce_code.h  reduce_noinit.cpp  reduce_noinit_code.h  sort.cpp  sort_heap.cpp  sort_heap_code.h  sort_projection.cpp  (+3 more)
code_examples/cpp23/: CMakeLists.txt  atomic1.cpp  atomic2.cpp  atomic3.h  atomic4.cpp  atomic4.h  atomic5.cpp  atomic6.h  awaiters1.cpp  awaiters1.h  barrier1.cpp  barrier2.cpp  barrier3.cpp  barrier4.cpp  coroutines1.cpp  coroutines2.cpp  coroutines3.cpp  coroutines4.cpp  coroutines4.h  coroutines5.cpp  coroutines5a.h  coroutines5b.h  coroutines6.cpp  coroutines_schema.h  for_each.cpp  for_each_code_cpp20.h  for_each_pseudocode.h  future1.cpp  future2.cpp  jthread1.cpp  jthread2.cpp  jthread3.cpp  jthread4.cpp  jthread5.cpp  jthread6.cpp  lock.h  lock_guard.h  merge_par.cpp  merge_par_code.h  mutex1.cpp  (+5 more)
code_examples/datastructures/: linkedlist.cpp  linkedlist.h
code_examples/introduction/: categories.cpp  categories_code.h  history_cc11.cpp  history_cc11_code.h  history_cc17.cpp  history_cc17_code.h  history_cc20.cpp  history_cc20_code.h  history_cc98.cpp  history_cc98_code.h  iterators.cpp  iterators_code.h  mental_find_code.h  mental_range.cpp  mental_range_code.h  mental_sorted.cpp  mental_sorted_code.h  mental_two.cpp  mental_two_code.h  sentinels.cpp  sentinels_code.h
code_examples/ml/: blas01.cpp  blas02.cpp  blas03.cpp  gauss01.cpp  gauss01_openmp.h  multiply01_openmp.h  multiply02_openmp.h  multiply03_openmp.h  multiply04_openmp.h  multiply05_openmp.h  multiply06_openmp.h
code_examples/openmp/: CMakeLists.txt  atomic1.cpp  barrier1.cpp  barrier2.cpp  critical1.cpp  critical2.h  for_each1.cpp  for_each2.cpp  mutex1.cpp  mutex2.cpp  parallel1.cpp  parallel2.cpp  parallel3.cpp  reduction.cpp  section1.cpp  section2.cpp  target1.h  target2.cpp  target2.h  task1.cpp
code_examples/sort/: sort_bubble1.h  sort_bubble2.h  sort_first.cpp  sort_gcc_impl.h  sort_merge1.h  sort_merge2.h  sort_merge3.h  sort_merge4.h  sort_merge5.h  sort_qs.h  sort_qs3w.h  sort_qs_stl.h
code_examples/sycl/: buffer1.cpp  buffer1.h  buffer2.cpp  buffer2.h  buffer3.cpp  buffer4.cpp  buffer4.h  exception1.cpp  link1.cmake  link2.cmake  link4.cmake  saxpy1.cpp  saxpy2.cpp  saxpy3.cpp
code_examples/theory/: comparable_code.h
