add_executable(atomic1 atomic1.cpp)
install(TARGETS atomic1 DESTINATION bin)

add_executable(atomic2 atomic2.cpp)
install(TARGETS atomic2 DESTINATION bin)

add_executable(barrier1 barrier1.cpp)
install(TARGETS barrier1 DESTINATION bin)

add_executable(barrier2 barrier2.cpp)
install(TARGETS barrier2 DESTINATION bin)

add_executable(barrier3 barrier3.cpp)
install(TARGETS barrier3 DESTINATION bin)

add_executable(coroutines1 coroutines1.cpp)
install(TARGETS coroutines1 DESTINATION bin)

add_executable(coroutines2 coroutines2.cpp)
install(TARGETS coroutines2 DESTINATION bin)

add_executable(coroutines3 coroutines3.cpp)
install(TARGETS coroutines3 DESTINATION bin)

add_executable(coroutines4 coroutines4.cpp)
install(TARGETS coroutines4 DESTINATION bin)

add_executable(for_each for_each.cpp)
install(TARGETS for_each DESTINATION bin)

add_executable(future1 future1.cpp)
install(TARGETS future1 DESTINATION bin)

add_executable(future2 future2.cpp)
install(TARGETS future2 DESTINATION bin)

add_executable(jthread1 jthread1.cpp)
install(TARGETS jthread1 DESTINATION bin)

add_executable(jthread2 jthread2.cpp)
install(TARGETS jthread2 DESTINATION bin)

add_executable(jthread3 jthread3.cpp)
install(TARGETS jthread3 DESTINATION bin)

add_executable(jthread4 jthread4.cpp)
install(TARGETS jthread4 DESTINATION bin)

add_executable(jthread5 jthread5.cpp)
install(TARGETS jthread5 DESTINATION bin)

add_executable(jthread6 jthread6.cpp)
install(TARGETS jthread6 DESTINATION bin)

add_executable(merge_par merge_par.cpp)
install(TARGETS merge_par DESTINATION bin)

add_executable(mutex1 mutex1.cpp)
install(TARGETS mutex1 DESTINATION bin)

add_executable(mutex2 mutex2.cpp)
install(TARGETS mutex2 DESTINATION bin)

add_executable(reduce reduce.cpp)
install(TARGETS reduce DESTINATION bin)

add_executable(thread1 thread1.cpp)
install(TARGETS thread1 DESTINATION bin)

add_executable(thread2 thread2.cpp)
install(TARGETS thread2 DESTINATION bin)
